--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ a {
 .header+div {
 	padding-top: 44px;
 }
+.header.search-input+div {
+	padding-top: 56px;
+}
 
 /* sideabr  */
 body.menuactive {
@@ -508,6 +511,95 @@ aria {
 	padding: 44px 15px 15px;
 	overflow: hidden;
 }
+.search-input {
+	background: #fff;
+	
+}
+.search-input .btn {
+	width: 46px;
+	padding: 5px 10px;
+	height: 36px;
+	line-height: 26px;
+}
+
+.search-input .input-group{
+	border: 1px solid #eee;
+	border-radius: 22px;
+	background: #eee;
+}
+.search-input a.del {
+	display: none;
+}
+
+.label {
+    padding: .2rem .6rem .3rem;
+    font-size: 85%;
+    line-height: 1;
+    color: #6a7a8a;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25rem;
+    margin-right: 1rem;
+}
+.label-default {
+    background-color: #f4f6f8;
+}
+.last-search {
+	display: none;
+}
+.author-wel-desc {
+	padding-left: 0;
+	padding-right: 0;
+}
+.panel {
+	margin-bottom: 20px;
+    background-color: #fff;
+    border-bottom: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,.05)
+}
+.panel-default {
+	border-color: #ddd;
+}
+.panel-group .panel {
+    margin-bottom: 0;
+    border-radius: 4px;
+}
+.panel-heading {
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+.panel-group .panel-heading {
+	border-bottom: 0;
+}
+.panel-default>.panel-heading {
+	color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+}
+.panel-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 16px;
+    color: inherit;
+}
+.panel-title>.small, .panel-title>.small>a, .panel-title>a, .panel-title>small, .panel-title>small>a {
+	color: inherit;
+}
+.panel-body {
+	padding: 10px 15px;
+}
+.panel-body p {
+	margin-bottom: 0;
+	line-height: 1.6;
+}
+.panel-default>.panel-heading+.panel-collapse>.panel-body {
+	border-top-color: #ddd;
+}
 /* cover bootstrap css  */
 .carousel-indicators {
 	margin-bottom: 0.25rem;
@@ -611,7 +703,9 @@ h6,
 .orange-theme .list-group-item.active {
 	background-color: #E3EAF1;
 }
-
+.orange-theme .header.active .input-group {
+	background: #fff;
+}
 .orange-theme .wrapper {
 	background-color: #E3EAF1;
 	background-image: -moz-radial-gradient(center, ellipse cover, rgba(250, 250, 250, 1) 0%, #E3EAF1 100%);
