--- a/css/style.css
+++ b/css/style.css
@@ -600,6 +600,23 @@ aria {
 .panel-default>.panel-heading+.panel-collapse>.panel-body {
 	border-top-color: #ddd;
 }
+.img-circle {
+	border-radius: 50%;
+}
+.full-scr-fff {
+	min-height: 100vh;
+	background: #fff;
+}
+.align-items-center {
+	align-items: center;
+}
+.horz label {
+	margin-bottom: 0;
+}
+a:hover {
+	color: inherit;
+	text-decoration: none;
+}
 /* cover bootstrap css  */
 .carousel-indicators {
 	margin-bottom: 0.25rem;
@@ -733,6 +750,7 @@ h6,
 .orange-theme .nav-pills .show>.nav-link,
 .orange-theme .loader-screen {
 	background-color: #fd7e14;
+	color: #fff;
 }
 
 .orange-theme .figure-profile,
