--- a/css/style.css
+++ b/css/style.css
@@ -345,12 +345,7 @@ body.sidemenu-open .sidebar {
 	background-color: #fd7e142b;
 }
 
-.fixed-bottom {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-}
+
 
 .main-carousel {
 	margin: 0 -15px;
@@ -507,9 +502,10 @@ aria {
 }
 .arti {
 	line-height: 2;
-	height: calc(100vh - 44px);
-	padding: 44px 15px 15px;
-	overflow: hidden;
+	height: calc(100% - 85px);
+	padding: 44px 15px 41px;
+	overflow: auto;
+	/* padding: 0 15px; */
 }
 .search-input {
 	background: #fff;
@@ -622,7 +618,13 @@ h6,
 .h6 {
 	font-size: 90%;
 }
-
+.btn-group-sm>.btn,
+.btn-sm {
+	padding: .15rem .5rem;
+	font-size: .7rem;
+	line-height: 1.5;
+	border-radius: .2rem
+}
 .btn-orange {
 	color: #fff;
 	background-color: #fd7e14;
